chore:prettierrc 설정

--- a/ts-portfolio/.prettierrc
+++ b/ts-portfolio/.prettierrc
@@ -4,6 +4,7 @@
   "useTabs": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 120,
+  "printWidth": 80,
+  "endOfLine": "auto",
   "arrowParens": "always"
 }
